--- a/opam-ci-check.opam
+++ b/opam-ci-check.opam
@@ -24,8 +24,12 @@ depends: [
   "cmdliner" {>= "1.1.1"}
   "opam-format" {>= "2.3.0~alpha1"}
   "opam-state" {>= "2.3.0~alpha1"}
+  "ocaml-version" {>= "3.6.9"}
+  "obuilder-spec"
   "odoc" {with-doc}
   "bos" {>= "0.2.1"}
+  "ppx_deriving" {>= "5.2.1"}
+  "ppx_deriving_yojson"
 ]
 build: [
   ["dune" "subst"] {dev}
