--- a/opam-ci-check/lib/dune
+++ b/opam-ci-check/lib/dune
@@ -1,4 +1,14 @@
 (library
  (name opam_ci_check)
  (public_name opam-ci-check)
- (libraries opam-format opam-state sexplib str bos))
+ (preprocess
+  (pps ppx_deriving.std ppx_deriving_yojson))
+ (libraries
+  opam-format
+  opam-state
+  sexplib
+  str
+  bos
+  ocaml-version
+  obuilder-spec
+  current_docker))
