--- a/test/dune
+++ b/test/dune
@@ -1,7 +1,12 @@
 (test
  (name test)
  (package opam-repo-ci-service)
- (libraries opam_repo_ci alcotest alcotest-lwt ppx_deriving_yojson.runtime)
+ (libraries
+  opam_ci_check
+  opam_repo_ci
+  alcotest
+  alcotest-lwt
+  ppx_deriving_yojson.runtime)
  (preprocess
   (pps ppx_deriving.eq ppx_deriving_yojson))
  (deps
