--- a/opam-ci-check/lib/dune
+++ b/opam-ci-check/lib/dune
@@ -3,9 +3,4 @@
  (public_name opam-ci-check)
  (preprocess
   (pps ppx_deriving.std ppx_deriving_yojson))
- (libraries
-  opam-client
-  sexplib
-  str
-  ocaml-version
-  obuilder-spec))
+ (libraries opam-client sexplib bos fpath str ocaml-version obuilder-spec))
