--- a/opam-ci-check.opam
+++ b/opam-ci-check.opam
@@ -21,10 +21,12 @@ depends: [
   "ocaml" {>= "4.14.0"}
   "dune" {>= "3.16"}
   "sexplib"
+  "bos" {>= "0.2.1"}
   "cmdliner" {>= "1.1.1"}
   "opam-format" {>= "2.3.0~alpha1"}
   "opam-state" {>= "2.3.0~alpha1"}
   "ocaml-version" {>= "3.6.9"}
+  "dockerfile-opam" {>= "6.3.0"}
   "obuilder-spec"
   "odoc" {with-doc}
   "bos" {>= "0.2.1"}
