--- a/opam-ci-check.opam
+++ b/opam-ci-check.opam
@@ -22,7 +22,8 @@ depends: [
   "dune" {>= "3.16"}
   "sexplib"
   "cmdliner" {>= "1.1.1"}
-  "opam-client" {>= "2.3.0~alpha1"}
+  "opam-format" {>= "2.3.0~alpha1"}
+  "opam-state" {>= "2.3.0~alpha1"}
   "odoc" {with-doc}
 ]
 build: [
