--- a/opam-ci-check/lib/dune
+++ b/opam-ci-check/lib/dune
@@ -1,4 +1,4 @@
 (library
  (name opam_ci_check)
  (public_name opam-ci-check)
- (libraries opam-client sexplib str))
+ (libraries opam-format opam-state sexplib str))
