--- a/opam-ci-check.opam
+++ b/opam-ci-check.opam
@@ -25,6 +25,7 @@ depends: [
   "opam-format" {>= "2.3.0~alpha1"}
   "opam-state" {>= "2.3.0~alpha1"}
   "odoc" {with-doc}
+  "bos" {>= "0.2.1"}
 ]
 build: [
   ["dune" "subst"] {dev}
