--- a/opam-ci-check/lib/dune
+++ b/opam-ci-check/lib/dune
@@ -1,6 +1,22 @@
 (library
+ (name opam_ci_check_lint)
+ (public_name opam-ci-check-lint)
+ (modules lint lint_error opam_helpers)
+ (libraries opam-state opam-format sexplib str))
+
+(library
  (name opam_ci_check)
  (public_name opam-ci-check)
  (preprocess
   (pps ppx_deriving.std ppx_deriving_yojson))
- (libraries opam-client sexplib bos fpath str ocaml-version obuilder-spec))
+ (modules
+  (:standard \ lint lint_error opam_helpers))
+ (libraries
+  opam-client
+  sexplib
+  bos
+  fpath
+  str
+  ocaml-version
+  obuilder-spec
+  opam-ci-check-lint))
