--- a/opam-ci-check.opam
+++ b/opam-ci-check.opam
@@ -23,6 +23,7 @@ depends: [
   "bos" {>= "0.2.1"}
   "fpath" {>= "0.7.3"}
   "cmdliner" {>= "1.1.1"}
+  "directories" {>= "0.5"}
   "opam-client" {>= "2.3.0~alpha1"}
   "ocaml-version" {>= "3.6.9"}
   "dockerfile-opam" {>= "6.3.0"}
